--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "lru-cache": "^8.0.5",
     "next": "13.2.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
